--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@ a,
                         <p>&nbsp;</p>
                         Suite 810 Chicago, 60601, United States</p>
                         <p>&nbsp;</p>
-                        <p>Email address : Info@evershince.com</p>
+                        <p>Email address : Info@everseach.com</p>
                         <p>&nbsp;</p>
                     </div>
                     <div class="footer-about">
