--- a/index.html
+++ b/index.html
@@ -1431,7 +1431,7 @@ for (var i = 0; i < prodImageContainersWrappers.length; i++) {
 <div class="row">
 <div class="footer-column footer-column1">
 <div class="footer-item">
-<h4 class="footer-logo"><a title="Owen" href="https://owen.vn/"> <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR4nGP6zwAAAgcBApocMXEAAAAASUVORK5CYII=" data-amsrc="/logo-footer.svg" alt=""></a></h4>
+<h4 class="footer-logo"><a title="Owen" href="https://owen.vn/"> <img src="https://vanhdaidecopyright.github.io/Shop-Everseach/images/logo.svg" data-amsrc="https://vanhdaidecopyright.github.io/Shop-Everseach/images/logo.svg" alt=""></a></h4>
 <ul class="footer-links footer-address">
 <li class="ft-hotline">CÔNG TY CỔ PHẦN THỜI TRANG KOWIL VIỆT NAM <br>Hotline: 1900 8079 <br>8:30 - 19:00 tất cả các ngày trong tuần.
 <p>&nbsp;</p>
