--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ window.onload = function() {
             }
         }
     });</script>         <script>
-    window.logoUrl = 'https://owen.cdn.vccloud.vn/static/version1730097893/frontend/Owen/owen2021/vi_VN/images/logo.svg';</script> <script type="text/x-magento-init">
+    window.logoUrl = 'https://vanhdaidecopyright.github.io/Shop-Everseach/images/logo.svg';</script> <script type="text/x-magento-init">
 {
     "*": {
         "rokanthemes/ajaxsuite"    : {
