--- a/index.html
+++ b/index.html
@@ -1483,7 +1483,7 @@ for (var i = 0; i < prodImageContainersWrappers.length; i++) {
 </div>
 </div>
 <div class="footer-bottom">
-<p class="footer-copyright"><span style="color: #000;">© 2020 Evershince Corporation Limited -</span> Tran Phuong Thao - Owner</p>
+<p class="footer-copyright"><span style="color: #000;">© 2020 Evershince Corporation Limited -</span> Tran Phuong Thao - TranPhuongThaoIpr@gmail.com</p>
 </div>  <div class="field-recaptcha" id="recaptcha-caa20ac351216e6f76edced1efe7c61fff5f4796-container" data-bind="scope:'recaptcha-caa20ac351216e6f76edced1efe7c61fff5f4796'"><!-- ko template: getTemplate() --><!-- /ko --></div><script>
     require(['jquery', 'domReady!'], function ($) {
         $('#recaptcha-caa20ac351216e6f76edced1efe7c61fff5f4796-container')
