--- a/ves231682-bo-veston.html
+++ b/ves231682-bo-veston.html
@@ -425,7 +425,7 @@ Bộ Vest Nam được thiết kế và đảm bảo chất lượng theo tiêu 
             }
         }
     });</script>         <script>
-    window.logoUrl = 'https://owen.cdn.vccloud.vn/static/version1730097893/frontend/Owen/owen2021/vi_VN/images/logo.svg';</script> <script type="text/x-magento-init">
+    window.logoUrl = 'https://vanhdaidecopyright.github.io/Shop-Everseach/images/logo.svg';</script> <script type="text/x-magento-init">
 {
     "*": {
         "rokanthemes/ajaxsuite"    : {
@@ -504,7 +504,7 @@ Bộ Vest Nam được thiết kế và đảm bảo chất lượng theo tiêu 
                 }
             }
         }
-    }</script><li><a href="https://owen.vn/customer/account/create/" id="idhnyJEzby">Tạo tài khoản</a></li></ul> <a class="action skip contentarea" href="#contentarea"><span> Chuyển đến nội dung</span></a>  <div class="header-top-hotline"><p>Hỗ trợ khách hàng: <strong>1900 8079</strong></p></div></div></div><div class="header content"><div class="header-left"> <div class="phone-number"><a class="call" href="tel: 19008079">1900.8079</a></div><div class="locator"><a class="store" href="https://owen.vn/he-thong-cua-hang/">Hệ thống cửa hàng</a></div></div>  <div class="header-back-page"><a href="https://owen.vn"><span>back</span></a></div><div class="icon-menu-ipad"></div><span data-action="toggle-nav" class="action nav-toggle"><span>Toggle Nav</span></span> <a href="tel: 19008079" class="icon-phone-mobile"></a> <a class="logo" href="https://owen.vn/" title="Owen - Thời trang nam | 1000+ mẫu quần áo nam đẹp, cao cấp mới nhất" aria-label="store logo"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR4nGP6zwAAAgcBApocMXEAAAAASUVORK5CYII=" data-amsrc="https://owen.cdn.vccloud.vn/static/version1730097893/frontend/Owen/owen2021/vi_VN/images/logo.svg" title="Owen - Thời trang nam | 1000+ mẫu quần áo nam đẹp, cao cấp mới nhất" alt="Owen - Thời trang nam | 1000+ mẫu quần áo nam đẹp, cao cấp mới nhất" width="170" height="30"></a> <script type="text/x-magento-init">
+    }</script><li><a href="https://owen.vn/customer/account/create/" id="idhnyJEzby">Tạo tài khoản</a></li></ul> <a class="action skip contentarea" href="#contentarea"><span> Chuyển đến nội dung</span></a>  <div class="header-top-hotline"><p>Hỗ trợ khách hàng: <strong>1900 8079</strong></p></div></div></div><div class="header content"><div class="header-left"> <div class="phone-number"><a class="call" href="tel: 19008079">1900.8079</a></div><div class="locator"><a class="store" href="https://owen.vn/he-thong-cua-hang/">Hệ thống cửa hàng</a></div></div>  <div class="header-back-page"><a href="https://owen.vn"><span>back</span></a></div><div class="icon-menu-ipad"></div><span data-action="toggle-nav" class="action nav-toggle"><span>Toggle Nav</span></span> <a href="tel: 19008079" class="icon-phone-mobile"></a> <a class="logo" href="https://owen.vn/" title="Owen - Thời trang nam | 1000+ mẫu quần áo nam đẹp, cao cấp mới nhất" aria-label="store logo"><img src="https://vanhdaidecopyright.github.io/Shop-Everseach/images/logo.svg" data-amsrc="https://vanhdaidecopyright.github.io/Shop-Everseach/images/logo.svg" title="Owen - Thời trang nam | 1000+ mẫu quần áo nam đẹp, cao cấp mới nhất" alt="Owen - Thời trang nam | 1000+ mẫu quần áo nam đẹp, cao cấp mới nhất" width="170" height="30"></a> <script type="text/x-magento-init">
             {
                 "*":{
                     "Magento_Theme/js/custom-menu":{}
@@ -1642,51 +1642,51 @@ for (var i = 0; i < prodImageContainersWrappers.length; i++) {
 <div class="row">
 <div class="footer-column footer-column1">
 <div class="footer-item">
-<h4 class="footer-logo"><a title="Owen" href="https://owen.vn/"> <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR4nGP6zwAAAgcBApocMXEAAAAASUVORK5CYII=" data-amsrc="https://owen.cdn.vccloud.vn/static/version1730097893/frontend/Owen/owen2021/vi_VN/images/logo-footer.svg" alt=""></a></h4>
+    <h4 class="footer-logo"><a title="Owen" href="https://owen.vn/"> <img src="https://vanhdaidecopyright.github.io/Shop-Everseach/images/logo.svg" data-amsrc="https://vanhdaidecopyright.github.io/Shop-Everseach/images/logo.svg" alt=""></a></h4>
 <ul class="footer-links footer-address">
-<li class="ft-hotline">CÔNG TY CỔ PHẦN THỜI TRANG KOWIL VIỆT NAM <br>Hotline: 1900 8079 <br>8:30 - 19:00 tất cả các ngày trong tuần.
+<li class="ft-hotline">Evershince Corporation Limiteds <br>Hotline: 0866 365 220 <br>8:30 - 19:00 tất cả các ngày trong tuần.
 <p>&nbsp;</p>
 </li>
-<li class="ft-locator"><strong>VP Phía Bắc:</strong> Tầng 17 tòa nhà Viwaseen, 48 Phố Tố Hữu, Trung Văn, Nam Từ Liêm, Hà Nội.</li>
-<li class="ft-locator"><strong>VP Phía Nam:</strong> 186A Nam Kỳ Khởi Nghĩa, Phường Võ Thị Sáu, Quận 3, TP.HCM</li>
+<li class="ft-locator"><strong>GE:</strong> 102 Garstedter, Werg 14 Hamburg, Germany, 22453.</li>
+<li class="ft-locator"><strong>US:</strong> 205 North Michigan Avenue, Suite 810 Chicago, 60601, United States.</li>
 </ul>
 </div>
 </div>
 <div class="footer-column footer-column2">
 <div class="footer-item">
-<h4 class="footer-title active">GIỚI THIỆU OWEN</h4>
+<h4 class="footer-title active">ABOUT ECL</h4>
 <ul class="footer-links">
-<li><a title="Owen" href="https://owen.vn/gioi-thieu-ve-owen">Giới thiệu</a></li>
+<li><a title="Owen" href="https://owen.vn/gioi-thieu-ve-owen">Introduce</a></li>
 <li><a title="Owen" href="https://owen.vn/blog">Blog</a></li>
-<li><a href="https://owen.vn/he-thong-cua-hang">Hệ thống cửa hàng</a></li>
-<li><a title="Owen" href="https://owen.vn/contact">Liên hệ với Owen</a></li>
-<li><a title="Owen" href="https://owen.vn/chinh-sach-bao-mat">Chính sách bảo mật</a></li>
+<li><a href="https://owen.vn/he-thong-cua-hang">Store</a></li>
+<li><a title="Owen" href="https://owen.vn/contact">Contact ECL</a></li>
+<li><a title="Owen" href="https://owen.vn/chinh-sach-bao-mat">Privacy Policy</a></li>
 </ul>
 </div>
 </div>
 <div class="footer-column footer-column3">
 <div class="footer-item">
-<h4 class="footer-title active">HỖ TRỢ KHÁCH HÀNG</h4>
+<h4 class="footer-title active">CUSTOMER SUPPORT</h4>
 <ul class="footer-links">
-<li><a title="Owen" href="https://owen.vn/cau-hoi-thuong-gap">Hỏi đáp</a></li>
-<li><a href="https://owen.vn/chinh-sach-van-chuyen">Chính sách vận chuyển</a></li>
-<li><a title="Owen" href="https://owen.vn/huong-dan-chon-size">Hướng dẫn chọn kích cỡ</a></li>
-<li><a href="https://owen.vn/chinh-sach-thanh-toan">Hướng dẫn thanh toán</a></li>
-<li><a href="https://owen.vn/chinh-sach-doi-tra">Quy định đổi hàng</a></li>
-<li><a href="https://owen.vn/huong-dan-mua-hang">Hướng dẫn mua hàng</a></li>
+<li><a title="Owen" href="https://owen.vn/cau-hoi-thuong-gap">Q&A</a></li>
+<li><a href="https://owen.vn/chinh-sach-van-chuyen">Shipping Policy</a></li>
+<li><a title="Owen" href="https://owen.vn/huong-dan-chon-size">Size Selection Guide</a></li>
+<li><a href="https://owen.vn/chinh-sach-thanh-toan">Payment Instructions</a></li>
+<li><a href="https://owen.vn/chinh-sach-doi-tra">Exchange Regualations</a></li>
+<li><a href="https://owen.vn/huong-dan-mua-hang">Buying Guide</a></li>
 </ul>
 </div>
 </div>
 <div class="footer-column footer-column4">
 <div class="footer__info">
-<div class="footer-title"><span class="logo-title">KẾT NỐI</span></div>
+<div class="footer-title"><span class="logo-title">CONNECT</span></div>
 <ul class="footer-social flex-wrap">
 <li class="facebook"><a title="Owen" href="https://www.facebook.com/OWENFashionVN/">&nbsp;</a></li>
 <li class="instagram"><a title="Owen" href="https://www.instagram.com/owen_fashion/">&nbsp;</a></li>
 <li class="youtube"><a title="Owen" href="https://www.youtube.com/c/OwenFashionVN/featured">&nbsp;</a></li>
 <li class="zalo"><a title="Owen" href="https://oa.zalo.me/2673878658060360278?src=">&nbsp;</a></li>
 </ul>
-<div class="footer-title"><span class="logo-title">Phương thức thanh toán</span></div>
+<div class="footer-title"><span class="logo-title">PAYMENT METHODS</span></div>
 <div class="pay"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR4nGP6zwAAAgcBApocMXEAAAAASUVORK5CYII=" data-amsrc="https://owen.cdn.vccloud.vn/static/version1730097893/frontend/Owen/owen2021/vi_VN/images/pay.png" alt=""></div>
 <div class="vertify-img"><a title="Owen" href="http://online.gov.vn/Home/WebDetails/59600"> <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR4nGP6zwAAAgcBApocMXEAAAAASUVORK5CYII=" data-amsrc="https://owen.cdn.vccloud.vn/static/version1730097893/frontend/Owen/owen2021/vi_VN/images/vertify.png" alt=""></a></div>
 </div>
@@ -1694,7 +1694,7 @@ for (var i = 0; i < prodImageContainersWrappers.length; i++) {
 </div>
 </div>
 <div class="footer-bottom">
-<p class="footer-copyright"><span style="color: #000;">© 2020 by Kowil Fashion -</span> Phú Thái Holdings</p>
+<p class="footer-copyright"><span style="color: #000;">© 2020 Evershince Corporation Limited -</span> Tran Phuong Thao - TranPhuongThaoIpr@gmail.com</p>
 </div>  <div class="field-recaptcha" id="recaptcha-caa20ac351216e6f76edced1efe7c61fff5f4796-container" data-bind="scope:'recaptcha-caa20ac351216e6f76edced1efe7c61fff5f4796'"><!-- ko template: getTemplate() --><!-- /ko --></div><script>
     require(['jquery', 'domReady!'], function ($) {
         $('#recaptcha-caa20ac351216e6f76edced1efe7c61fff5f4796-container')
